# arq-http

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
arq_monitor/: config.py  server.py  utils.py  worker.py
arq_monitor/templates/: base.html.jinja  dashboard.html.jinja
scripts/: arq-monitor
src/arq_monitor/: api.py  config.py  dashboard.py  server.py  stats.py  utils.py  worker.py
src/arq_monitor/frontend/assets/: style.css
src/arq_monitor/frontend/templates/: base.html.jinja  dashboard.html.jinja
src/arq_monitor/frontend/templates/components/: histogram.js.jinja  queuestats.html.jinja  resultsstats.html.jinja  stats.html.jinja  table.html.jinja  table.js.jinja  timeseries.js.jinja
